--- a/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
+++ b/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
@@ -9,8 +9,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderCreation">
-<Button fx:id="backButton" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
+<AnchorPane prefHeight="600.0" prefWidth="800" styleClass="customer-order-creation-page" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderCreation">
+<Button fx:id="backButton" styleClass="back-button" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
     <Label layoutX="20.0" layoutY="50.0" style="-fx-font-weight: bold;" text="Please Choose a branch" />
     <ComboBox fx:id="branchComboBox" layoutX="20.0" layoutY="70.0" onAction="#handleBranchSelection" prefWidth="200.0" />
 
