--- a/BiteMeClient/src/ClientGUI/MyOrders.fxml
+++ b/BiteMeClient/src/ClientGUI/MyOrders.fxml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.MyOrders">
-    <children>
-        <Label layoutX="330.0" layoutY="10.0" style="-fx-font-size: 24; -fx-font-weight: bold;" text="My Orders" textAlignment="CENTER" underline="true">
-            <font>
-                <Font name="Aharoni Bold" size="28.0" />
-            </font>
-        </Label>
-        <Button fx:id="backButton" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="800" styleClass="my-orders-page" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.MyOrders">
+    <VBox spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header">
+            <Text fx:id="headlineText" text="My Orders" wrappingWidth="387.38525390625" />
+            <HBox HBox.hgrow="ALWAYS" />
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBackButtonAction" text="BACK" />
+            <Button fx:id="RefreshListButton" mnemonicParsing="false" onAction="#handleRefreshButton" text="REFRESH LIST" />
+        </HBox>
+    </VBox>
 
-        <TableView fx:id="orderTableView" layoutX="204.0" layoutY="55.0" prefHeight="400.0" prefWidth="391.0">
-            <columns>
-                <TableColumn fx:id="orderIdColumn" prefWidth="50.0" text="ID" />
-                <TableColumn fx:id="orderDateColumn" prefWidth="150.0" text="Order Date" />
-                <TableColumn fx:id="totalPriceColumn" prefWidth="100.0" text="Price" />
-            </columns>
-        </TableView>
-        
-        <Text fx:id="errorText" fill="RED" layoutX="50.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error" textAlignment="CENTER" visible="false" wrappingWidth="700.0">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Text>
-      <Button fx:id="approveOrderButton" layoutX="340.0" layoutY="491.0" mnemonicParsing="false" onAction="#handleApproveOrderAction" prefHeight="44.0" prefWidth="119.0" text="Confirm Order">
-         <font>
+    <TableView fx:id="orderTableView" layoutX="204.0" layoutY="85.0" prefHeight="400.0" prefWidth="391.0">
+        <columns>
+            <TableColumn fx:id="orderIdColumn" prefWidth="50.0" text="ID" />
+            <TableColumn fx:id="orderDateColumn" prefWidth="150.0" text="Order Date" />
+            <TableColumn fx:id="totalPriceColumn" prefWidth="100.0" text="Price" />
+        </columns>
+    </TableView>
+    
+    <Text fx:id="errorText" fill="RED" layoutX="50.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error" textAlignment="CENTER" visible="false" wrappingWidth="700.0">
+        <font>
+            <Font size="16.0" />
+        </font>
+    </Text>
+    
+    <Button fx:id="approveOrderButton" layoutX="306.0" layoutY="526.0" mnemonicParsing="false" onAction="#handleApproveOrderAction" prefHeight="44.0" prefWidth="189.0" text="Confirm Order">
+        <font>
             <Font size="14.0" />
-         </font>
-      </Button>
-      <Button fx:id = "RefreshListButton" layoutX="676.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="REFRESH LIST" onAction="#handleRefreshButton"/>
-    </children>
+        </font>
+    </Button>
 </AnchorPane>
