--- a/BiteMeClient/src/ClientGUI/WorkerPendingOrders.fxml
+++ b/BiteMeClient/src/ClientGUI/WorkerPendingOrders.fxml
@@ -2,42 +2,41 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.WorkerPendingOrders">
-    <children>
-        <Label layoutX="330.0" layoutY="10.0" style="-fx-font-size: 24; -fx-font-weight: bold;" text="Pending Orders" textAlignment="CENTER" underline="true">
-            <font>
-                <Font name="Aharoni Bold" size="28.0" />
-            </font>
-        </Label>
-        <Button fx:id="backButton" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="worker-pending-orders-page" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.WorkerPendingOrders">
+    <VBox spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header">
+            <Text fx:id="headlineText" text="Pending Orders" />
+            <HBox HBox.hgrow="ALWAYS" />
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBackButtonAction" text="BACK" />
+        </HBox>
+    </VBox>
 
-        <TableView fx:id="orderTableView" layoutX="50.0" layoutY="60.0" prefHeight="400.0" prefWidth="700.0">
-            <columns>
-                <TableColumn fx:id="orderIdColumn" prefWidth="50.0" text="ID" />
-                <TableColumn fx:id="ordererColumn" prefWidth="120.0" text="Orderer" />
-                <TableColumn fx:id="orderDateColumn" prefWidth="150.0" text="Order Date" />
-                <TableColumn fx:id="totalPriceColumn" prefWidth="100.0" text="Price" />
-                <TableColumn fx:id="deliveryColumn" prefWidth="100.0" text="Delivery" />
-                <TableColumn fx:id="statusColumn" prefWidth="110.0" text="Status" />
-            </columns>
-        </TableView>
+    <TableView fx:id="orderTableView" layoutX="17.0" layoutY="80.0" prefHeight="351.0" prefWidth="772.0">
+        <columns>
+            <TableColumn fx:id="orderIdColumn" prefWidth="50.0" text="ID" />
+            <TableColumn fx:id="ordererColumn" prefWidth="120.0" text="Orderer" />
+            <TableColumn fx:id="orderDateColumn" prefWidth="150.0" text="Order Date" />
+            <TableColumn fx:id="totalPriceColumn" prefWidth="100.0" text="Price" />
+            <TableColumn fx:id="deliveryColumn" prefWidth="100.0" text="Delivery" />
+            <TableColumn fx:id="statusColumn" prefWidth="148.0" text="Status" />
+        </columns>
+    </TableView>
 
-        <ComboBox fx:id="etaComboBox" layoutX="325.0" layoutY="491.0" prefWidth="150.0" promptText="-Choose Comment-" visible="true">
-        </ComboBox>
-        <Button fx:id="approveOrderButton" disable="true" layoutX="140.0" layoutY="488.0" onAction="#handleApproveOrderAction" prefHeight="30.0" prefWidth="150.0" text="APPROVE ORDER" />
-        <Button fx:id="orderReadyButton" disable="true" layoutX="511.0" layoutY="488.0" onAction="#handleOrderReadyAction" prefHeight="30.0" prefWidth="150.0" text="ORDER READY" />
-        
-        <Text fx:id="errorText" fill="RED" layoutX="50.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" visible="false" wrappingWidth="700.0">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Text>
-    </children>
+    <ComboBox fx:id="etaComboBox" layoutX="325.0" layoutY="450.0" prefWidth="150.0" promptText="-Choose Comment-" />
+    <Button fx:id="approveOrderButton" disable="true" layoutX="140.0" layoutY="500.0" onAction="#handleApproveOrderAction" prefHeight="30.0" prefWidth="150.0" text="APPROVE ORDER" />
+    <Button fx:id="orderReadyButton" disable="true" layoutX="511.0" layoutY="500.0" onAction="#handleOrderReadyAction" prefHeight="30.0" prefWidth="150.0" text="ORDER READY" />
+    
+    <Text fx:id="errorText" fill="RED" layoutX="50.0" layoutY="560.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" visible="false" wrappingWidth="700.0">
+        <font>
+            <Font size="16.0" />
+        </font>
+    </Text>
 </AnchorPane>
