--- a/BiteMeClient/src/ClientGUI/UpdateAddDish.fxml
+++ b/BiteMeClient/src/ClientGUI/UpdateAddDish.fxml
@@ -4,54 +4,31 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateAddDish">
+<AnchorPane prefHeight="600" prefWidth="800" styleClass="blue-gradient-1, update-add-dish" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateAddDish">
    <children>
-      <Button fx:id="backButton" layoutX="23.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Text fx:id="addDishText" layoutX="318.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Dish">
-         <font>
-            <Font name="System Bold" size="40.0" />
-         </font>
-      </Text>
-      <Text fx:id="dishTypeText" layoutX="288.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dish Type:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text fx:id="dishNameText" layoutX="288.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dish Name:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text fx:id="priceText" layoutX="288.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text fx:id="isGrillText" layoutX="288.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Is Grill:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <TextField fx:id="dishNameField" layoutX="371.0" layoutY="185.0" />
-      <TextField fx:id="priceField" layoutX="371.0" layoutY="216.0" />
-      <ComboBox fx:id="isGrillComboBox" layoutX="371.0" layoutY="248.0" prefHeight="25.0" prefWidth="64.0" />
-      <ComboBox fx:id="dishTypeComboBox" layoutX="371.0" layoutY="151.0" prefWidth="150.0" />
-      <Button fx:id="saveDishButton" layoutX="348.0" layoutY="319.0" mnemonicParsing="false" onAction="#handleSaveDishAction" text="Save Dish">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Text fx:id="errorText" fill="RED" layoutX="30.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="CENTER" visible="false" wrappingWidth="747.4700393676758">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
+      <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <Text fx:id="addDishText" styleClass="headline-text" text="Add Dish" />
+         <HBox HBox.hgrow="ALWAYS" />
+         <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back" />
+      </HBox>
+      
+      <Text fx:id="dishTypeText" styleClass="label-text" layoutX="200.0" layoutY="120.0" text="Dish Type:" AnchorPane.topAnchor="100.0" />
+      <ComboBox fx:id="dishTypeComboBox" layoutX="300.0" layoutY="100.0" prefWidth="200.0" AnchorPane.topAnchor="95.0" />
+      
+      <Text fx:id="dishNameText" styleClass="label-text" layoutX="200.0" layoutY="170.0" text="Dish Name:" AnchorPane.topAnchor="150.0" />
+      <TextField fx:id="dishNameField" layoutX="300.0" layoutY="150.0" prefWidth="200.0" AnchorPane.topAnchor="145.0" />
+      
+      <Text fx:id="priceText" styleClass="label-text" layoutX="200.0" layoutY="220.0" text="Price:" AnchorPane.topAnchor="200.0" />
+      <TextField fx:id="priceField" layoutX="300.0" layoutY="200.0" prefWidth="200.0" AnchorPane.topAnchor="195.0" />
+      
+      <Text fx:id="isGrillText" styleClass="label-text" layoutX="200.0" layoutY="270.0" text="Is Grill:" AnchorPane.topAnchor="250.0" />
+      <ComboBox fx:id="isGrillComboBox" layoutX="300.0" layoutY="250.0" prefWidth="200.0" AnchorPane.topAnchor="245.0" />
+      
+      <Button fx:id="saveDishButton" layoutX="300.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleSaveDishAction" text="Save Dish" AnchorPane.topAnchor="320.0" />
+      
+      <Text fx:id="errorText" styleClass="error-text" layoutX="50.0" layoutY="400.0" textAlignment="CENTER" visible="false" wrappingWidth="700.0" AnchorPane.topAnchor="380.0" />
    </children>
 </AnchorPane>
