--- a/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
+++ b/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
@@ -6,22 +6,18 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
+<AnchorPane prefHeight="600" prefWidth="800" styleClass="blue-gradient-1, update-delete-menu" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
    <children>
-      <Button fx:id="backButton" layoutX="30.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Text layoutX="165.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update/Delete Menu Dishes">
-         <font>
-            <Font name="System Bold" size="32.0" />
-         </font>
-      </Text>
-      <TableView fx:id="menuTableView" layoutX="96.0" layoutY="92.0" prefHeight="265.0" prefWidth="585">
+      <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <Text fx:id="titleText" styleClass="headline-text" text="Update/Delete Menu Dishes" />
+         <HBox HBox.hgrow="ALWAYS" />
+         <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back" />
+      </HBox>
+      
+      <TableView fx:id="menuTableView" layoutX="30.0" layoutY="80.0" prefHeight="250.0" prefWidth="740.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
          <columns>
             <TableColumn fx:id="typeColumn" prefWidth="120" text="Type" />
             <TableColumn fx:id="nameColumn" prefWidth="140" text="Name" />
@@ -30,38 +26,19 @@
             <TableColumn fx:id="grillColumn" prefWidth="70" text="Grill" />        
          </columns>
       </TableView>
-      <Button fx:id="saveButton" layoutX="94.0" layoutY="523.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button fx:id="deleteButton" layoutX="552.0" layoutY="523.0" mnemonicParsing="false" onAction="#handleDeleteButtonAction" text="Delete Dish">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <TextField fx:id="nameField" layoutX="165.0" layoutY="380.0" />
-      <TextField fx:id="priceField" layoutX="164.0" layoutY="418.0" />
-      <ComboBox fx:id="grillComboBox" layoutX="165.0" layoutY="458.0" prefWidth="150.0" />
-      <Text layoutX="95.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text layoutX="95.0" layoutY="437.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text fx:id="grillText" layoutX="94.0" layoutY="477.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grill:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text fx:id="errorText" fill="RED" layoutX="95.0" layoutY="513.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="CENTER" visible="false" wrappingWidth="585.3333333333333">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
+      
+      <Text styleClass="label-text" layoutX="30.0" layoutY="365.0" text="Name:" AnchorPane.leftAnchor="30.0" />
+      <TextField fx:id="nameField" layoutX="100.0" layoutY="345.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" />
+      
+      <Text styleClass="label-text" layoutX="30.0" layoutY="405.0" text="Price:" AnchorPane.leftAnchor="30.0" />
+      <TextField fx:id="priceField" layoutX="100.0" layoutY="385.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" />
+      
+      <Text fx:id="grillText" styleClass="label-text" layoutX="30.0" layoutY="445.0" text="Grill:" AnchorPane.leftAnchor="30.0" />
+      <ComboBox fx:id="grillComboBox" layoutX="100.0" layoutY="425.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" />
+      
+      <Button fx:id="saveButton" layoutX="200.0" layoutY="500.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes" AnchorPane.bottomAnchor="30.0" />
+      <Button fx:id="deleteButton" layoutX="500.0" layoutY="500.0" mnemonicParsing="false" onAction="#handleDeleteButtonAction" text="Delete Dish" AnchorPane.bottomAnchor="30.0" />
+      
+      <Text fx:id="errorText" styleClass="error-text" layoutX="30.0" layoutY="570.0" textAlignment="CENTER" visible="false" wrappingWidth="740.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.bottomAnchor="10.0" />
    </children>
 </AnchorPane>
