--- a/BiteMeClient/src/ClientGUI/UpdateMenuNavigation.fxml
+++ b/BiteMeClient/src/ClientGUI/UpdateMenuNavigation.fxml
@@ -2,40 +2,26 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateMenuNavigation">
+<AnchorPane prefHeight="600" prefWidth="800" styleClass="blue-gradient-1" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateMenuNavigation">
    <children>
-      <Text fx:id="actionPromptText" layoutX="274.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please choose an action to perform:">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Button fx:id="backButton" layoutX="23.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="updateDeleteButton" layoutX="312.0" layoutY="197.0" mnemonicParsing="false" onAction="#handleUpdateDeleteButtonAction" prefHeight="73.0" prefWidth="175.0" text="Update/Delete&#10; existing dishes" textAlignment="CENTER">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="addNewDishButton" layoutX="312.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleAddNewDishButtonAction" prefHeight="73.0" prefWidth="175.0" text="Add a new dish&#10; to the menu" textAlignment="CENTER">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Text fx:id="titleText" layoutX="242.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Menu Selection">
-         <font>
-            <Font name="System Bold" size="30.0" />
-         </font>
-      </Text>
-      <Text fx:id="errorText" fill="RED" layoutX="42.0" layoutY="418.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ErrorText" textAlignment="CENTER" visible="false" wrappingWidth="715.6719131469727">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
+      <VBox AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header">
+            <Text fx:id="titleText" styleClass="headline-text" text="Update Menu Selection" />
+            <HBox HBox.hgrow="ALWAYS" />
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back" />
+         </HBox>
+      </VBox>
+      
+      <Text fx:id="actionPromptText" layoutX="262.0" layoutY="133.0" styleClass="instruction-text" text="Please choose an action to perform:" AnchorPane.leftAnchor="262.0" AnchorPane.rightAnchor="262.0849609375" AnchorPane.topAnchor="113.576171875" />
+      
+      <Button fx:id="updateDeleteButton" mnemonicParsing="false" onAction="#handleUpdateDeleteButtonAction" text="Update/Delete&#10;existing dishes" AnchorPane.leftAnchor="310.0" AnchorPane.topAnchor="200.0" />
+      
+      <Button fx:id="addNewDishButton" mnemonicParsing="false" onAction="#handleAddNewDishButtonAction" text="Add a new dish&#10;to the menu" AnchorPane.leftAnchor="310.0" AnchorPane.topAnchor="320.0" />
+      
+      <Text fx:id="errorText" styleClass="error-text" text="ErrorText" textAlignment="CENTER" visible="false" wrappingWidth="715.6719131469727" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" />
    </children>
 </AnchorPane>
