--- a/BiteMeClient/ClientGUI/UserHomePageProcess/UserHomePage.fxml
+++ b/BiteMeClient/ClientGUI/UserHomePageProcess/UserHomePage.fxml
@@ -20,7 +20,7 @@
          <HBox styleClass="button-container">
             <VBox styleClass="button-column">
                <Button fx:id="createOrderButton" mnemonicParsing="false" onAction="#handleCreateOrder" text="Create&#10;Order" />
-               <Button fx:id="myOrdersButton" mnemonicParsing="false" onAction="#handleMyOrders" text="My Orders" />
+               <Button fx:id="myOrdersButton" mnemonicParsing="false" onAction="#handleMyOrders" text="Active Deliveries" />
                <Button fx:id="changeHomeBranchButton" mnemonicParsing="false" onAction="#handleChangeHomeBranch" text="Change Home&#10;Branch" />
             </VBox>
             
